--- a/app/motdujour/src/assets/i18n/en.json
+++ b/app/motdujour/src/assets/i18n/en.json
@@ -12,5 +12,6 @@
     "day": "Days",
     "week": "Week",
     "month": "Month",
-    "pleaseWait": "Please wait..."
+    "pleaseWait": "Please wait...",
+    "noResults": "No results"
 }
